# jupyter-webgui

./: .gitignore  README.md  pyproject.toml  requirements.txt
jupyterwebgui/: app.py
jupyterwebgui/templates/: index.html
jupyterwebui/: example.ipynb  messages.csv
jupyterwebui/templates/: index.html
