[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter_webgui"
version = "0.1.0"
description = "A simple web interface for Jupyter notebooks"
authors = [{name = "Jeroen Verstraelen", email = "verstraelenjeroen@gmail.com"}]
dependencies = [
]

[tool.setuptools]
packages = ["jupyterwebgui"]
